k8s/immich/postgres-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres
  namespace: immich
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: immich
      ports:
        - protocol: TCP
          port: 5432
    - from:
        - podSelector:
            matchLabels:
              app: immich-monitor-bootstrap
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: alloy-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: alloy
              app.kubernetes.io/instance: alloy
      ports:
        - protocol: TCP
          port: 5432
